--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity
             android:name=".Mapa"
             android:label="@string/title_activity_mapa" />
-        <activity android:name=".InformacionPersonal"></activity>
+        <activity android:name=".InformacionPersonal" />
+        <activity android:name=".AcercaDe"></activity>
     </application>
 
 </manifest>
